--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+
   text-align: center;
 }
 
@@ -57,4 +57,8 @@
 
 .bodytext {
 font-family: "Open-sans";
+}
+
+.button {
+  font-family: "Poppins";
 }
